FullQa New/src/objects/Draft_Knowledge__c.object
<CustomObject>
    <fields>
        <fullName>API__c</fullName>
        <formula>TEXT(Sales_Tax_Matrix__r.API__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Draft Knowledges</relationshipLabel>
        <relationshipName>Draft_Knowledges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Validation_Click_Path__c</fullName>
        <label>Address Validation Click Path</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avalara_Professional_Services_Notes__c</fullName>
        <label>Avalara Professional Services Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Exemption_Click_Path__c</fullName>
        <label>Client Exemption Click Path</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <formula>Sales_Tax_Matrix__r.Company_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Click_Path__c</fullName>
        <label>Configuration Click Path</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Connector_Description__c</fullName>
        <label>Connector Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Connector_Type__c</fullName>
        <formula>TEXT(Connector__r.Connector_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connector Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connector_Vibrancy__c</fullName>
        <formula>TEXT(Connector__r.Vibrancy__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connector Vibrancy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connector</label>
        <referenceTo>Connector__c</referenceTo>
        <relationshipLabel>Draft Knowledges</relationshipLabel>
        <relationshipName>Draft_Knowledges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Draft Knowledges (Implementation Contact)</relationshipLabel>
        <relationshipName>Draft_Knowledges1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Download_User_Guide_Template__c</fullName>
        <label>Download User Guide Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escalation Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Draft Knowledges (Escalation Contact)</relationshipLabel>
        <relationshipName>Draft_Knowledges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Notes__c</fullName>
        <label>Implementation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Path__c</fullName>
        <label>Implementation Path</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line_Level_Addressing__c</fullName>
        <label>Line Level Addressing</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Location_Code_Click_Path__c</fullName>
        <label>Location Code &amp; Click Path</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Fee__c</fullName>
        <label>Partner Fee</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Platform_Category__c</fullName>
        <formula>TEXT(Connector__r.Platform_Cateogry__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platform Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Mapping_Click_Path__c</fullName>
        <label>Product Mapping Click Path</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Requires_Avalara_Professional_Services__c</fullName>
        <formula>Connector__r.Requires_Avalara_Professional_Services__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requires Avalara Professional Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_Sales_Engineer__c</fullName>
        <formula>Connector__r.Sales_Engineer_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requires Sales Engineer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Matrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Tax Matrix</label>
        <referenceTo>Functional_Matrix__c</referenceTo>
        <relationshipLabel>Draft Knowledges</relationshipLabel>
        <relationshipName>Draft_Knowledges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selling_Information__c</fullName>
        <label>Selling Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submit_Demo_Video_url__c</fullName>
        <label>Submit Demo Video (url)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Submit_User_Guide_url__c</fullName>
        <label>Submit User Guide (url)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Support_Notes__c</fullName>
        <label>Support Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_Path__c</fullName>
        <label>Support Path</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_Plans__c</fullName>
        <label>Support Plans</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Guide_Documentation__c</fullName>
        <label>User Guides URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Version</label>
        <referenceTo>Version__c</referenceTo>
        <relationshipLabel>Draft Knowledges</relationshipLabel>
        <relationshipName>Draft_Knowledges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Who_papers_the_agreement__c</fullName>
        <formula>TEXT(Connector__r.Who_papers_the_agreement__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Who papers the agreement?</label>
        <type>Text</type>
    </fields>
    <label>Draft Knowledge</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approved__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DK-{0000}</displayFormat>
        <label>Draft Knowledge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Draft Knowledges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>